--- a/Admin.cshtml
+++ b/Admin.cshtml
@@ -23,7 +23,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="content">
-                        <h1>Admin</h1>
+                        <h2>Admin Main Page</h2>
+                        <p><a href="~/Admin/UserManager.cshtml">Manage User Accounts</a></p>
+                        <p><a href="~/Admin/ContentManager.cshtml">Manage Contents</a></p>
                         <hr>
                         <img class="chart" src="~/Charts/FollowersChart.cshtml" alt="Number of followers per user">
                         <img class="chart" src="~/Charts/PostsChart.cshtml" alt="Number of posts per user">
