--- a/Account/UpdateProfile.cshtml
+++ b/Account/UpdateProfile.cshtml
@@ -22,18 +22,29 @@
 
     <!-- WORK WITH DATA -->
     var db = Database.Open("StarterSite");
-    var name = UrlData[0];
+    //var name = UrlData[0];
+    var id = UrlData[0];
 
-    if(name.IsEmpty()) {
+    /*if(name.IsEmpty()) {
+        Response.Redirect(@Href("~/Account/EditProfile"));
+    }*/
+
+    if(id.IsEmpty()) {
         Response.Redirect(@Href("~/Account/EditProfile"));
     }
 
-    var selectQueryString = "SELECT * FROM UserProfile WHERE UserName=@0";
-    var row = db.QuerySingle(selectQueryString, name);
+
+    //var selectQueryString = "SELECT * FROM UserProfile WHERE UserName=@0";
+    //var row = db.QuerySingle(selectQueryString, name);
+
+    var selectQueryString = "SELECT * FROM UserProfile WHERE UserId=@0";
+    var row = db.QuerySingle(selectQueryString,id);
 
     var username = row.UserName;
+    var userid = row.UserId;
     var currentImage = Request.ApplicationPath + row.ProfilePicture;
     var checkLog = row.IsLoggedIn; 
+
 
     // Redirect to the error page if the user tries to access others account
     if (checkLog == false) {
@@ -48,8 +59,10 @@
         
       var image = imagePath;
        if (ModelState.IsValid) {
-           var updateQueryString = "UPDATE UserProfile SET UserName=@0, ProfilePicture=@1 WHERE UserName=@2";
-           db.Execute(updateQueryString,username,imagePath,name);
+          // var updateQueryString = "UPDATE UserProfile SET UserName=@0, ProfilePicture=@1 WHERE UserName=@2"
+          // db.Execute(updateQueryString,username,imagePath,name);;
+           var updateQueryString = "UPDATE UserProfile SET UserName=@0, ProfilePicture=@1 WHERE UserId=@2";
+           db.Execute(updateQueryString, username, imagePath, id);
            Response.Redirect(@Href("~/Account/MyProfile.cshtml"));
        } 
     }
@@ -86,7 +99,7 @@
                                     <input type="file" name="profilePicture" >
                                 </div> 
                                 <div class="field">
-                                    <a href="@Href("~/Account/MyProfile",name)">
+                                    <a href="@Href("~/Account/MyProfile",id)">
                                         <input type="button" value="Cancel">
                                     </a>
                                     <input type="submit" value="Update Profile">
