--- a/Admin/DeleteMessage.cshtml
+++ b/Admin/DeleteMessage.cshtml
@@ -5,7 +5,9 @@
     if (!User.IsInRole("Admin")) {
         Response.Redirect("~/404");
     }
-     Layout = "~/_SiteLayout.cshtml";
+     //Layout = "~/_SiteLayout.cshtml";
+     Layout = "~/_MainLayout.cshtml";
+
      var db = Database.Open("StarterSite");
      var userID = UrlData[0];
 
@@ -22,7 +24,7 @@
          db.Execute(deleteMessage,userID);
          
         
-         Response.Redirect("~/Admin.cshtml");
+         Response.Redirect("~/Admin/ContentManager.cshtml");
      }   
 }
 
