--- a/Default.cshtml
+++ b/Default.cshtml
@@ -3,32 +3,36 @@
     Page.Title = "FriendlyZone";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="content">
-                <h1>@Page.Title</h1>
-                <i class="fa fa-users" style="font-size: 100px"></i>
-                <h3>Cookies anyone?</h3>
-                <hr>
-              <!-- <a href="~/Member" class="btn btn-default btn-lg"><i class="fa fa-users">
-                    <span style="color: black">Get Started!</span></i></a>  -->  
+<html>
+    <body id="index">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="content">
+                        <h1>@Page.Title</h1>
+                        <i class="fa fa-users" style="font-size: 100px"></i>
+                        <h3>Sign up now!</h3>
+                        <hr>
+                      <!-- <a href="~/Member" class="btn btn-default btn-lg"><i class="fa fa-users">
+                            <span style="color: black">Get Started!</span></i></a>  -->  
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<div class="message">
-    <br>
-   <p>Members are requested to post according to the following guidlines:</p>
-    <ol>
-        <li>
-            <h4>Think Before Posting</h4>
-        </li>
-        <li>
-            <h4>Use Appropriate Language</h4>
-        </li>
-        <li>
-            <h4>Have Respect for Others</h4>
-            <br><br>
-    </ol>
-</div> 
+        <div class="message">
+            <br>
+           <p>Members are requested to post according to the following guidlines:</p>
+            <ol>
+                <li>
+                    <h4>Think Before Posting</h4>
+                </li>
+                <li>
+                    <h4>Use Appropriate Language</h4>
+                </li>
+                <li>
+                    <h4>Have Respect for Others</h4>
+                    <br><br>
+            </ol>
+        </div> 
+    </body>
+</html>
