--- a/styles/app.css
+++ b/styles/app.css
@@ -1,14 +1,17 @@
 body {  
-  //  background-color: #0b3e99;
-    background-color: #12466d;
+    background: #EFEFBB; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #EFEFBB , #D4D3DD); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #EFEFBB , #D4D3DD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */   
 }
 
-body,
-html {
+body, html {
     width: 100%;
     height: 100%;
-    font-family: "Lato";
-    color: white;
+    //font-family: "Lato";
+    //font-family: 'Indie Flower', cursive;
+    color: black;
+   // color: #7ba7cc;
+    font-family: 'Montserrat', sans-serif;     
 }
 
 h1 {
@@ -31,10 +34,7 @@ img.chart {
 /** DIV **/
 .content{
 	padding-top: 10%;
-	text-align: center;
-    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-                 0px 8px 13px rgba(0,0,0,0.1),
-                 0px 18px 23px rgba(0,0,0,0.1);
+	text-align: center; 
 } 
 
 .message { 
@@ -50,15 +50,10 @@ img.chart {
     width: 600px;
     margin: auto;   
 }
-
-.content-login a:link, a:visited {
-    color: white;
-}
-
+ 
 
 .content-register a:link, a:visited {
-    text-decoration: none;
-    color: white;
+    text-decoration: none; 
 }
 
 .content-register {
@@ -113,7 +108,8 @@ hr {
 }
 
 .table {
-    padding-top: 5%;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 input {
@@ -201,7 +197,8 @@ label {
 
 /** TABLE **/
 .table-info {
-    padding-left: 32%; 
+    padding-left: 40px; 
+    padding-right: 40px;
 }
 
 .table-info table {
@@ -212,7 +209,7 @@ label {
 }
 
 .table-info td {
-    padding: 0.25em 2em 0.25em 0em;
+    padding: 0.25em 2em 2em 0em;
     border: 0 none;
 }
 
@@ -229,6 +226,25 @@ label {
 }
 
 .table-member-info td {
-    padding: 0.25em 2em 0.25em 0em;
+    padding: 0.25em 2em 2em 0em;
     border: 0 none;
+}
+
+
+#follow {
+    padding-bottom: 35px;
+}
+
+#index {
+    background-image: url('../images/friends.jpg');
+    background-size: cover;
+} 
+
+.second {
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+#logout {
+    padding-top: 8px;
 }
